# acdj

ACDJ/: ui_dialog_preferences.h  ui_mainwindow.h
Documentation/: UML_diagram.dia
contrib/sqlite-3.6.23.1/: libtool
src/: ACDJ.pro  CMakeLists.txt  Oldmainwindow.ui  controlwidget.cpp  controlwidget.h  dialog_about.ui  dialog_preferences.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicmodewidget.cpp  playercontrols.cpp  playlistmodel.cpp  songfile.cpp  songfile.h  system_tray.qrc  test.cpp  ui_dialog_about.h
src/sqlite3/: CMakeLists.txt
trunk/: smartlist.dtd  wanted features.txt
trunk/ACDJ/: dialog_preferences.cpp  mainwindow.cpp
trunk/Documentation/: Documentation of icons
trunk/contrib/sqlite-3.6.23.1/: Makefile  config.status
trunk/src/: ACDJ.pro  CMakeLists.txt  config.h.in  controlwidget.cpp  controlwidget.h  dialog_preferences.h  library.cpp  library.h  main.cpp  mainwindow.cpp  mainwindow.h  musicmodewidget.cpp  musicmodewidget.h  playercontrols.h  playercontrols.ui  playlistmodel.h  songfile.cpp  ui_mainwindow.h
